third_party/move/tools/move-package-manifest/tests/dependencies/multiple-locations-3.exp
error: failed to parse manifest
  |
1 | [package]
2 | name = "some_package_name"
3 | version = "0.1.2"
4 |
5 | [dependencies]
6 | a = { local = "../a", aptos = "mainnet" }
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ dependency cannot have have multiple locations
7 |
  |
